--- a/app/views/caseaccess/pages/PA-00467-2017-ta.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-ta.html
@@ -131,7 +131,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
             </div> -->
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Assigned to
+                  <span style="padding-left:25px">Assigned to</span>
               </dt>
               <dd class="govuk-summary-list__value">
                 Judge Beech
@@ -139,7 +139,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
             </div>
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Manage
+                <span style="padding-left:25px">Manage</span>
               </dt>
               <dd class="govuk-summary-list__value">
                 	<a href="" class="right">Reassign task</a> <a href="/caseaccess/pages/PA-00467-2017-t" class="right">Unassign task</a>
@@ -147,7 +147,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
             </div>
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Next steps
+                  <span style="padding-left:25px">Next steps</span>
               </dt>
               <dd class="govuk-summary-list__value">
                 <a href="PA-00467-2017-tr-case">Review specific access request</a>
@@ -162,7 +162,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
           <dl class="govuk-summary-list govuk-summary-list--no-border">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Assigned to
+                  <span style="padding-left:25px">Assigned to</span>
               </dt>
               <dd class="govuk-summary-list__value">
                 Judge Beech
@@ -170,7 +170,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
             </div>
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Manage
+                <span style="padding-left:25px">Manage</span>
               </dt>
               <dd class="govuk-summary-list__value">
                 <a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a>
@@ -178,7 +178,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
             </div>
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
-                Next steps
+                  <span style="padding-left:25px">Next steps</span>
               </dt>
               <dd class="govuk-summary-list__value">
                 <a href="#">Review application decision</a>
