--- a/app/views/workallocation/pages/wa-PA-00467-2017-t.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-t.html
@@ -97,33 +97,10 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
         classes: "govuk-tag--grey"
         })}}</span></p>
             <dl class="govuk-summary-list govuk-summary-list--no-border">
-          <!--    <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                  Request from
-                </dt>
-                <dd class="govuk-summary-list__value">
-                  Judge Randel-Combeswardly
-                </dd>
-              </div>
+
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Date submitted
-                </dt>
-                <dd class="govuk-summary-list__value">
-                  DD/MM/YYYY
-                </dd>
-              </div>
-              <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                  Purpose for access
-                </dt>
-                <dd class="govuk-summary-list__value">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices enim in egestas porttitor. Vivamus iaculis ex eu dolor feugiat elementum. Nunc id laoreet elit. In hac habitasse platea dictumst
-                </dd>
-              </div> -->
-              <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                  Manage
+                <span style="padding-left:25px">Manage</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="wa-PA-00467-2017-ta">Assign task to me</a>
@@ -138,7 +115,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
             <dl class="govuk-summary-list govuk-summary-list--no-border">
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Assigned to
+                  <span style="padding-left:25px">Assigned to</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   Judge Beech
@@ -146,7 +123,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
               </div>
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Manage
+                  <span style="padding-left:25px">Manage</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a>
@@ -154,7 +131,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
               </div>
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Next steps
+                  <span style="padding-left:25px">Next steps</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="#">Review application decision</a>
