--- a/app/views/workallocation/pages/wa-PA-00321-2018.html
+++ b/app/views/workallocation/pages/wa-PA-00321-2018.html
@@ -87,10 +87,10 @@ Case details
             <h2 class="govuk-heading-m  govuk-!-margin-bottom-2">Task alert</h2>
             <div class="govuk-warning-text">
               <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-              <strong class="govuk-warning-text__text">
+              <span class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
                 There is an application task which might impact other active tasks.
-              </strong>
+              </span>
             </div>
             <h2 class="govuk-heading-m">Active tasks</h2>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
