--- a/app/views/workallocation/pages/wa-mytasks-o.html
+++ b/app/views/workallocation/pages/wa-mytasks-o.html
@@ -72,21 +72,21 @@ My work
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="#">Hudson Remi</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">HR</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Taylor House</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
               style="fill: black">
               <title>This case has more than one task. Review needed.</title>
               <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
                                 C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
             </svg></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/workallocation/pages/wa-PA-00321-2018">Generate decision and reasons</a></td>
-          <td class="govuk-table__cell">{{govukTag ({text: "dd/mm/yyyy",
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="/workallocation/pages/wa-PA-00321-2018">Generate decision and reasons</a></td>
+          <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">{{govukTag ({text: "dd/mm/yyyy",
                                 classes: "govuk-tag--yellow"
                               })}} </td>
           <!--    <td class="govuk-table__cell">N/A<a href="#"></a></td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
+          <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
         </tr>
 
         <tr class="govuk-table__row">
