--- a/app/views/caseaccess/pages/PA-00467-2017-t.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-t.html
@@ -1,4 +1,4 @@
-{% if  data.usertype == 'judiciary'   %}
+#{% if  data.usertype == 'judiciary'   %}
 {% extends "../layoutjudicial.html" %}
 {% else %}
 {% extends "../layoutstaff.html" %}
