--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -23,11 +23,14 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks?usertype=judiciary&">My tasks - tab</a><br>Checked with DS - v3.1.1</p>
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-rs?usertype=judiciary&">My tasks - tab - Reset sorting</a><br>Checked with DS - v3.1.1</p>
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-o?usertype=judiciary&">My tasks - open - Go to tasks</a><br>Checked with DS - v3.1.1</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018?usertype=judiciary&">Active tasks</a><br>Checked with DS - v3.1.1 -- UPDATE PATTERN</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-a?usertype=judiciary&">Active tasks - Assign task to me</a><br>Checked with DS - v3.1.1 -- UPDATE PATTERN</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018?usertype=judiciary&">Active tasks</a><br>Checked with DS - v3.1.1 </p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-a?usertype=judiciary&">Active tasks - Assign task to me</a><br>Checked with DS - v3.1.1</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-app?usertype=judiciary&">Active tasks - Next steps - do the task</a><br></p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-c?usertype=judiciary&">Active tasks - task complete</a><br>Checked with DS - v3.1.1 -- UPDATE PATTERN SEE MIRO 3.1.1</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Available tasks - tab</a><br>Checked with DS - v3.1.1 -- UPDATE PATTERN - Assign to me and go to task</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-app-confirmation?usertype=judiciary&">Active tasks - task complete</a><br>Checked with DS - v3.1.1</p>
+
+        <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Active tasks - task complete - return tp task tab</a><br>Checked with DS - v3.1.1</p>
+
+        <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Available tasks - tab</a><br>Checked with DS - v3.1.1</p>
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-pag?usertype=judiciary&">Available tasks - tab - pagination (needs research)</a><br>Checked with DS - v3.1.1 </p>
         <p><a target="_blank" href="/workallocation/pages/wa-mycases?usertype=judiciary&">My cases - tab</a><br>Checked with DS - v3.1.1</p>
         <p><a target="_blank" href="/workallocation/pages/wa-myaccess?usertype=judiciary&">My access - tab</a><br>Checked with DS - v3.1.1</p>
