--- a/app/views/workallocation/pages/wa-PA-00321-2018-a.html
+++ b/app/views/workallocation/pages/wa-PA-00321-2018-a.html
@@ -115,15 +115,15 @@ classes: "govuk-tag--grey"
             <dl class="govuk-summary-list govuk-summary-list--no-border">
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Assigned to
+                    <span style="padding-left:25px">Assigned to</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  Judge Beech
+                    Judge Beech
                 </dd>
               </div>
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Manage
+                  <span style="padding-left:25px">Manage</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a>
@@ -131,7 +131,7 @@ classes: "govuk-tag--grey"
               </div>
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Next steps
+                  <span style="padding-left:25px">Next steps</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="#">Generate decision and reasons</a>
@@ -146,7 +146,7 @@ classes: "govuk-tag--grey"
             <dl class="govuk-summary-list govuk-summary-list--no-border">
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Assigned to
+                  <span style="padding-left:25px">Assigned to</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   Judge Beech
@@ -154,7 +154,7 @@ classes: "govuk-tag--grey"
               </div>
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Manage
+                <span style="padding-left:25px">Manage</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a>
@@ -162,7 +162,7 @@ classes: "govuk-tag--grey"
               </div>
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Next steps
+                  <span style="padding-left:25px">Next steps</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="/workallocation/pages/wa-PA-00321-2018-app">Review application decision</a>
