--- a/app/views/workallocation/pages/wa-PA-00321-2018.html
+++ b/app/views/workallocation/pages/wa-PA-00321-2018.html
@@ -101,7 +101,7 @@ classes: "govuk-tag--grey"
             <dl class="govuk-summary-list govuk-summary-list--no-border">
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Assigned to
+                  <span style="padding-left:25px">Assigned to</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   Judge Beech
@@ -109,7 +109,7 @@ classes: "govuk-tag--grey"
               </div>
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Manage
+                    <span style="padding-left:25px">Manage</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a>
@@ -117,7 +117,7 @@ classes: "govuk-tag--grey"
               </div>
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Next steps
+                  <span style="padding-left:25px">Next steps</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="#">Generate decision and reasons</a>
@@ -132,7 +132,7 @@ classes: "govuk-tag--grey"
             <dl class="govuk-summary-list govuk-summary-list--no-border">
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Manage
+                  <span style="padding-left:25px">Manage</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="/workallocation/pages/wa-PA-00321-2018-a" class="right">Assign task to me</a>
