--- a/app/views/workallocation/pages/wa-PA-00467-2017-arjra-de.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arjra-de.html
@@ -126,7 +126,7 @@ Case details
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
 
-      
+
 
         </tbody>
     </table>
@@ -162,7 +162,7 @@ Case details
 
         </tbody>
     </table>
-    <p><a href="#" class="govuk-link">Add</a></p>
+    <p><a href="#" class="govuk-link"></a></p>
         <h2 class="govuk-heading-m">Conflicts of interest</h2>
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
