--- a/app/views/caseaccess/pages/PA-00467-2017-tu.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tu.html
@@ -7,11 +7,18 @@
 Case details
 {% endblock %}
 {% block content %}
-
+<div class="hmcts-banner hmcts-banner--success">
+<svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
+<path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" /></svg>
+<div class="hmcts-banner__message">
+<span class="hmcts-banner__assistive">Success</span>
+You've unassigned yourself a task.
+</div>
+</div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
     <div>
-      <h1 class="govuk-heading-xl">PA/00321/2018</h1>
+      <h1 class="govuk-heading-xl">PA/00467/2017</h1>
     </div>
     <div style="display: flex; align-items:right">
       <p class="govuk-!-margin-top-2">Next step &nbsp;</p>
@@ -36,47 +43,47 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="wa-PA-00321-2018">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-t">
           Tasks
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
           Roles / access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
           Overview
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Appeal
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Appellent
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Documents
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Directions
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Applications
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="#past-week">
           Case notes
         </a>
       </li>
@@ -90,13 +97,52 @@ Case details
       <div>
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
-
             <h2 class="govuk-heading-m">Active tasks</h2>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <p class="govuk-body"><strong>Generate decision and reasons</strong> <span class="hmcts-badge_right">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}}</span></p>
+            <p class="govuk-body"><strong>
+Review specific access request</strong> <span class="hmcts-badge_right">{{govukTag({
+        text: "dd/mm/yyyy",
+        classes: "govuk-tag--grey"
+        })}}</span></p>
+            <dl class="govuk-summary-list govuk-summary-list--no-border">
+          <!--    <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Request from
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  Judge Randel-Combeswardly
+                </dd>
+              </div>
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Date submitted
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  DD/MM/YYYY
+                </dd>
+              </div>
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Purpose for access
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices enim in egestas porttitor. Vivamus iaculis ex eu dolor feugiat elementum. Nunc id laoreet elit. In hac habitasse platea dictumst
+                </dd>
+              </div> -->
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    <span style="padding-left:25px">Manage</span>
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  <a href="PA-00467-2017-ta">Assign task to me</a>
+                </dd>
+              </div>
+            </dl>
+            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            <p class="govuk-body"><strong>Review application decision</strong> <span class="hmcts-badge_right">{{govukTag({
+        text: "dd/mm/yyyy",
+        classes: "govuk-tag--grey"
+        })}}</span></p>
             <dl class="govuk-summary-list govuk-summary-list--no-border">
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
@@ -108,7 +154,7 @@ classes: "govuk-tag--grey"
               </div>
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                <span style="padding-left:25px">Manage</span>
+                  <span style="padding-left:25px">Manage</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
                   <a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a>
@@ -119,14 +165,14 @@ classes: "govuk-tag--grey"
                   <span style="padding-left:25px">Next steps</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  <a href="#">Generate decision and reasons</a>
+                  <a href="#">Review application decision</a>
                 </dd>
               </div>
             </dl>
-
+          </div>
+        </div>
+        <div class="govuk-grid-column-one-third">
+        </div>
+      </div>
     </div>
-    <div class="govuk-grid-column-one-third">
-    </div>
-  </div>
-</div>
-{% endblock %}
+    {% endblock %}
