--- a/app/views/caseaccess/pages/available-tasks-s2o.html
+++ b/app/views/caseaccess/pages/available-tasks-s2o.html
@@ -59,17 +59,20 @@ My work
         </thead>
             <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review specific access request</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--orange">2 days</span> </td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Amelia Chu</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Immigration and Asylum</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">London</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Review specific access request</td>
+                    <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">{{govukTag({
+text: "dd/mm/yyyy",
+classes: "govuk-tag--yellow"
+})}} </td>
                   <!--  <td class="govuk-table__cell">N/A</td> -->
-                    <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="available-tasks-s2" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
+                    <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">&nbsp;&nbsp;&nbsp;<a href="available-tasks-s2" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
                 </tr>
-                <tr class="govuk-table__row">
-                    <td colspan="7" class="govuk-table__cell right"><a href="#" class="right">Assign to me</a><a href="PA-00467-2017-t" class="right_l">Go to tasks</a></td>
+                <tr class="govuk-table__row" >
+                    <td colspan="7" class="govuk-table__cell right"><a href="#" class="right">Assign to me</a><a href="PA-00467-2017-ta" class="right_l">Assign to me and go to task</a></td>
                 </tr>
                 <tr class="govuk-table__row">
 
@@ -78,7 +81,10 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">1 day</span>  </td>
+                    <td class="govuk-table__cell">{{govukTag({
+text: "dd/mm/yyyy",
+classes: "govuk-tag--grey"
+})}} </td>
                 <!--    <td class="govuk-table__cell">14 Mar 2021</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
@@ -91,7 +97,10 @@ My work
                     <title>This case has more than one task. Review needed.</title><path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
                     C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">1 day</span>  </td>
+                    <td class="govuk-table__cell">{{govukTag({
+text: "dd/mm/yyyy",
+classes: "govuk-tag--grey"
+})}} </td>
                   <!--  <td class="govuk-table__cell">N/A</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
