--- a/app/views/workallocation/pages/wa-PA-00467-2017-arj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arj.html
@@ -171,7 +171,7 @@ Case details
 
         </tbody>
     </table>
-    <p><a href="#" class="govuk-link">Add</a></p>
+    <p><a href="#" class="govuk-link"></a></p>
         <h2 class="govuk-heading-m">Conflicts of interest</h2>
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
