added reference style and loading screen

--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -25,7 +25,7 @@ Case details
     <table class="govuk-table ">
         <thead class="govuk-table__head">
         <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 25%;">Case name</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 25%;">Case</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 20%;">Service</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 18%;">State</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 30%;">Court or hearing centre</th>
@@ -39,7 +39,7 @@ Case details
             <!-- One result -->
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Vanetta Medley</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Vanetta Medley<br>0598-5385-1020-1905 </td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case under review</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Tribunal Hearing Centre</td>
@@ -51,21 +51,21 @@ Case details
         {% elif  data.results == 'three'   %}
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Loan Bourland</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Loan Bourland<br><span style="font-size: 16px; color:#505a5f;">0598-5385-1020-1905</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal submitted</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Tribunal Hearing Centre</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
                     </tr>
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Basilia Bourdeau</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Basilia Bourdeau<br><span style="font-size: 16px; color:#505a5f;">4520-3340-3600-1211</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case under review</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Yarl's Wood Immigration and Asylum Hearing Centre</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsdivorce">View</a></td>
                     </tr>
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Letha Schwebach</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Letha Schwebach<br><span style="font-size: 16px; color:#505a5f;">0087-2869-7369-3465</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Money Claims</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ready for transfer</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Clerkenwell and Shoreditch County Court and Family Court</td>
