--- a/app/views/caseaccess/pages/PA-00467-2017-un.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-un.html
@@ -39,10 +39,10 @@ Case details
           <tbody>
             <tr>
 
-              <td data-label="Case">Lacey-May Sanders</td>
+              <td data-label="Case">Amelia Chu</td>
               <td data-label="Reference">Protection</td>
               <td data-label="Status">Taylor House</td>
-              <td data-label="Date">Review respondent evidence</td>
+              <td data-label="Date">	Review specific access request</td>
                 <td data-label="Amount">{{govukTag({
       text: "dd/mm/yyyy",
       classes: "govuk-tag--red"
