--- a/app/views/caseaccess/pages/PA-00467-2017-tr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr.html
@@ -163,7 +163,7 @@ Reviewer          </tr>
     href: "/caseaccess/pages/available-tasks-s2o",
     classes: "govuk-button--secondary"
   }) }} -->
-  <p><a class="govuk-body" href="/caseaccess/pages/available-tasks-s2o">Cancel and unassign task</a></p>
+  <p><a class="govuk-body" href="PA-00467-2017-tac">Cancel</a></p>
 </div>
 </form>
 <script type="text/javascript">
