--- a/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
@@ -70,7 +70,7 @@ Case details
   classes: "govuk-button--secondary"
 }) }}
 -->
-  <p><a class="govuk-body" href="/caseaccess/pages/PA-00467-2017-t">Cancel and unassign task</a></p>
+<p><a class="govuk-body" href="PA-00467-2017-tac">Cancel</a></p>
 </div>
 
 </div>
