--- a/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
@@ -163,7 +163,7 @@ Purpose A          </tr>
     href: "/caseaccess/pages/PA-00467-2017-t",
     classes: "govuk-button--secondary"
   }) }} -->
-  <p><a class="govuk-body" href="/caseaccess/pages/PA-00467-2017-t">Cancel and unassign task</a></p>
+    <p><a class="govuk-body" href="PA-00467-2017-tac">Cancel</a></p>
 </div>
 </form>
 <script type="text/javascript">
