--- a/app/views/caseaccess/pages/PA-00467-2017-tra-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tra-case.html
@@ -185,7 +185,7 @@ Case details
         href: "/caseaccess/pages/PA-00467-2017-t",
         classes: "govuk-button--secondary"
       }) }} -->
-  <p><a class="govuk-body" href="/caseaccess/pages/PA-00467-2017-t">Cancel and unassign task</a></p>
+  <p><a class="govuk-body" href="PA-00467-2017-tac">Cancel</a></p>
     </div>
     </div>
     </div>
