--- a/app/views/caseaccess/pages/PA-00321-2018-request.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request.html
@@ -42,17 +42,21 @@ Case details
       items: [
         {
           value: "email",
-          text: "Purpose A"
+          text: "To view details of last hearing or order related to the parties on my current case"
         },
         {
           value: "phone",
-          text: "Purpose B"
+          text: "To view details of the other case linked to the parties/family on my current case"
         },
         {
           value: "email",
-          text: "Purpose C"
+          text: "To determine if the case needs to be consolidated with my current case"
         },
-
+        
+        {
+          value: "next",
+          text: "To view evidence in the best interest of a child involved in current proceedings"
+        },
         {
      divider: "or"
    },
