--- a/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
@@ -32,18 +32,18 @@ Case details
     text: "This reason will be sent to the requester. Select one option."
   },
   items: [
-    {
-      value: "email",
-      text: "More information needed. Please contact me to discuss further."
-    },
-    {
-      value: "phone",
-      text: "Reason B."
-    },
-    {
-      value: "email",
-      text: "Reason C."
-    },
+  {
+    value: "email",
+    text: "Based on the reasons you have provided, I do not believe it is appropriate for you to gain access to this case"
+  },
+  {
+    value: "phone",
+    text: "You have not supplied enough information, please contact me to discuss further"
+  },
+  {
+    value: "email",
+    text: "You have a conflict of interest with this case"
+  },
 
     {
  divider: "or"
