--- a/app/views/caseaccess/pages/PA-00467-2017-trr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr.html
@@ -34,15 +34,15 @@ Case details
   items: [
     {
       value: "email",
-      text: "More information needed. Please contact me to discuss further."
+      text: "Based on the reasons you have provided, I do not believe it is appropriate for you to gain access to this case"
     },
     {
       value: "phone",
-      text: "Reason B."
+      text: "You have not supplied enough information, please contact me to discuss further"
     },
     {
       value: "email",
-      text: "Reason C."
+      text: "You have a conflict of interest with this case"
     },
 
     {
