--- a/app/views/caseaccess/pages/myaccess-tcrvd.html
+++ b/app/views/caseaccess/pages/myaccess-tcrvd.html
@@ -115,7 +115,7 @@ Case details
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Request for access</th>
-                <td class="govuk-table__cell">Purpose A (Example: Reviewer)<br>I need to gain access to support the case I'm deciding.</td>
+                <td class="govuk-table__cell">To view details of the other case linked to the parties/family on my current case.</td>
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Access decision</th>
@@ -128,17 +128,18 @@ Case details
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for rejection</th>
                 <td class="govuk-table__cell">
-Insufficient ground for access supplied. <br>Please contact me to discuss further.         </tr>
+You have not supplied enough information, please contact me to discuss further.       </tr>
             </tbody>
           </table>
         </div>
       </div>
   <div class="govuk-button-group">
-<!--  {{ govukButton({
+{{ govukButton({
     text: "Re-request access",
+    href: "/caseaccess/pages/PA-00467-2017",
     classes: "govuk-!-margin-right-3"
-  }) }} -->
-
+  }) }}
+<!-- <p><a class="govuk-body" href="PA-00467-2017-tac">Cancel</a></p> -->
 
 
 </div>
