--- a/app/views/caseaccess/pages/PA-00467-2017.html
+++ b/app/views/caseaccess/pages/PA-00467-2017.html
@@ -48,23 +48,25 @@ Specific access.<br>Access requires manual authorisation. Access to this case is
             	Immigration and Asylum
           </dd>
         </div>
+
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
+            State
+          </dt>
+          <dd class="govuk-summary-list__value">
+            Appeal submitted
+          </dd>
+        </div>
+
+
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
             Court or hearing centre
           </dt>
           <dd class="govuk-summary-list__value">
-            	City of London Magistrates' Court
+              City of London Magistrates' Court
           </dd>
         </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-            Status
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Open
-          </dd>
-        </div>
-
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
             Access
