--- a/app/views/caseaccess/pages/PA-00321-2018.html
+++ b/app/views/caseaccess/pages/PA-00321-2018.html
@@ -51,20 +51,21 @@ Case details
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
+            State
+          </dt>
+          <dd class="govuk-summary-list__value">
+            Appeal submitted
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key summary-key">
             Court or hearing centre
           </dt>
           <dd class="govuk-summary-list__value">
             Manchester Civil Justice Centre
           </dd>
         </div>
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-            Status
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Open
-          </dd>
-        </div>
+
 
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key summary-key">
