--- a/app/views/workallocation/pages/wa-PA-00467-2017-ta.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ta.html
@@ -119,7 +119,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
                 <span style="padding-left:25px">Manage</span>
               </dt>
               <dd class="govuk-summary-list__value">
-                	<a href="" class="right">Reassign task</a> <a href="wa-PA-00467-2017-t" class="right">Unassign task</a>
+                	<a href="" class="right">Reassign task</a> <a href="wa-PA-00467-2017-un" class="right">Unassign task</a>
               </dd>
             </div>
             <div class="govuk-summary-list__row">
