--- a/app/views/workallocation/pages/wa-PA-00467-2017-tr-case.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-tr-case.html
@@ -49,13 +49,13 @@ Purpose A          </tr>
         </legend>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-tra-case">
+            <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="/workallocation/pages/wa-PA-00467-2017-tra-case">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live">
               Approve request
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-trr-case">
+            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/workallocation/pages/wa-PA-00467-2017-trr-case">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
               Reject request
             </label>
@@ -74,7 +74,7 @@ Purpose A          </tr>
     href: "/caseaccess/pages/PA-00467-2017-t",
     classes: "govuk-button--secondary"
   }) }} -->
-  <p><a class="govuk-body" href="wa-PA-00467-2017-t">Cancel and unassign task</a></p>
+  <p><a class="govuk-body" href="wa-PA-00467-2017-tac">Cancel</a></p>
 </div>
 </form>
 <script type="text/javascript">
