--- a/app/views/workallocation/pages/wa-mytasks-ao.html
+++ b/app/views/workallocation/pages/wa-mytasks-ao.html
@@ -58,17 +58,17 @@ My work
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Lacey-May Sanders</a></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-          <td class="govuk-table__cell">{{govukTag({
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="#">Lacey-May Sanders</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Protection</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Taylor House</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Review respondent evidence</td>
+          <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">{{govukTag({
 text: "dd/mm/yyyy",
 classes: "govuk-tag--red"
 })}} </td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-a" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
+          <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-a" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
         </tr>  <tr class="govuk-table__row">
 
             <td colspan="7" class="right"> <a href="reassign" class="right">Reassign</a> <a href="lms" class="right">Unassign</a> <a href="#" class="right_tl">Go to tasks</a></td>
